2005-09-01  Daniel Macks  <dmacks@netspace.org>

	* Validation: dpkg validation now performed on an unpacked archive
	with a wrapper to unpack a .deb (merge in val-unpack branch).
	* PkgVersion.pm: -m mode validates %d *before* constructing .deb.

2005-08-31  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: Set invariant name *before* package name is expanded.
	
2005-08-31  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: Don't error if .info file not in 'finkinfo'. For a
	regular index, it's enforced by only looking there. For scripts, we don't
	care anyhow.
	
2005-08-31  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: Fix deb-building breakage.
	
	*** Rebuild your DB with 'fink index -f' if you used Fink from HEAD since
	2005-08-30 ***

2005-08-31  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Config.pm: Fixed bug causing 0 to be taken as array ref.

2005-08-31  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Config.pm: Allow filtering of treelist via command line option.
	* Package.pm: Don't use/store proxy db if using custom treelist.
	* Package.pm: Don't include Status packages that aren't installed in Fink's
	DB. It's confusing to do 'fink list blah' and find a package, and then
	'fink install blah' makes the dep engine get confused and die.
	* Engine.pm: Use *i* to indicate a package newer than the newest package
	fink knows about (not including status, of course!). Option 'toonew'
	needs decision on whether we keep it, and docs.

2005-08-31  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: Add convenience method to get just one PkgVersion from
	a .info file.
	* PkgVersion.pm, Validation.pm, FinkVersion.pm.in: Info3 enhancements
	for pkglist fields:
		- Normalize whitespace
		- Allow comments (# to end of line)
		- Remove trailing comma

2005-08-30  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* PkgVersion.pm: allow overriding of bzip2 path in fink.conf
