@@ -1,3 +1,7 @@
+2005-09-02  Daniel Macks  <dmacks@netspace.org>
+
+	* Engine.pm: Implement cleanup_buildlocks
+
 2005-09-01  Daniel Macks  <dmacks@netspace.org>
 
 	* Validation: dpkg validation now performed on an unpacked archive
